# src/main/java/it/gov/pagopa/pu/sil/controller/AmountUpdatesController.java
@@ -1,0 +1,26 @@
+package it.gov.pagopa.pu.sil.controller;
+
+import it.gov.pagopa.pu.sil.controller.generated.AmountUpdatesApi;
+import it.gov.pagopa.pu.sil.dto.generated.AmountUpdatesDTO;
+import it.gov.pagopa.pu.sil.security.SecurityUtils;
+import it.gov.pagopa.pu.sil.service.actualization.ActualizationService;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+@Slf4j
+@RestController
+public class AmountUpdatesController implements AmountUpdatesApi {
+  private final ActualizationService actualizationService;
+
+  public AmountUpdatesController(ActualizationService actualizationService) {
+    this.actualizationService = actualizationService;
+  }
+
+  @Override
+  public ResponseEntity<AmountUpdatesDTO> getAmountUpdates(Long orgSilServiceId, String orgFiscalCode, String nav) {
+    log.info("Requested getAmountUpdates for orgSilServiceId: {}, orgFiscalCode: {}, nav: {}", orgSilServiceId, orgFiscalCode, nav);
+    return ResponseEntity.ok(actualizationService.actualize(orgSilServiceId, orgFiscalCode, nav,
+      SecurityUtils.getLoggedUser(), SecurityUtils.getAccessToken()));
+  }
+}
